# self-evolving-multi-agent-reviewer

./: .gitignore  .secrets.baseline  README.md  pyproject.toml  requirements.txt  semar_engine.db
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: ci.yml  code-quality.yml  release.yml  scheduled.yml  security-scan.yml
docs/: ARCHITECTURE.md  IMPLEMENTATION_PLAN.md  NAMING.md  PROJECT_OVERVIEW.md  ROADMAP.md  SELF_IMPROVEMENT.md  USER_GUIDE.md
semar/: __init__.py  engine.py
semar/agents/: base_agent.py  improvement_selector.py  judge_agent.py  registry.py  rl_algorithm_selector.py  trajectory_analyzer.py  trajectory_store.py
semar/agents/language_agents/: __init__.py  base_language.py  cpp.py  go.py  java.py  javascript.py  python.py  rust.py  typescript.py
semar/config/: default.toml  settings.py
semar/self_improvement/harness/: prompt_evolver.py  rule_evolver.py  skill_discovery.py
semar/self_improvement/weight_training/: data_pipeline.py  lora_trainer.py
semar/self_improvement/weight_training/algorithms/: __init__.py  base_algorithm.py  best_of_nn.py  dpo.py  entropic_advantage.py  grpo.py  ppo_gae.py  reinforce_kl.py
semar/self_improvement/weight_training/reward_signals/: human_feedback.py  outcome_based.py
semar/utils/: helpers.py
tests/: conftest.py
tests/security/: test_exfiltration.py  test_injection.py  test_prompt_injection.py  test_secrets.py
tests/unit/: test_base_agent.py  test_engine.py  test_harness.py  test_improvement_selector.py  test_judge_agent.py  test_language_agents.py  test_language_detection.py  test_parallel_dispatch.py  test_rl_algorithm_selector.py  test_trajectory_analyzer.py  test_weight_training.py
