[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "semar"
version = "0.1.0"

authors = [
  { name = "Sayed Tenkanen", email = "sayed@example.com" },
]

description = "Self-Evolving Multi-Agent Reviewer - A self-improving PR review system with language-specific agents and continuous learning."
readme = "README.md"
requires-python = ">=3.12"
keywords = ["AI", "Agents", "Pull Request", "Code Review", "Self-Improvement", "Multi-Agent"]
license = { file = "LICENSE" }

classifiers = [
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Quality Assurance",
]

dependencies = [
  "litellm>=1.31.0",
  "dynaconf>=3.2.0",
  "aiohttp>=3.9.0",
  "pydantic>=2.5.0",
  "gitpython>=3.1.0",
  "loguru>=0.7.0",
  "rich>=13.7.0",
  "httpx>=0.25.0",
]

[project.optional-dependencies]
ml = [
  "peft>=0.7.0",
  "transformers>=4.36.0",
  "torch>=2.1.0",
  "trl>=0.7.0",
  "datasets>=2.16.0",
  "numpy>=1.24.0",
]
dev = [
  "pytest>=7.4.0",
  "pytest-asyncio>=0.23.0",
  "pytest-cov>=4.1.0",
  "ruff>=0.1.0",
  "ty>=0.1.0",
  "pre-commit>=3.6.0",
]

[project.urls]
"Homepage" = "https://github.com/sayedtenkanen/self-evolving-multi-agent-reviewer"
"Documentation" = "https://github.com/sayedtenkanen/self-evolving-multi-agent-reviewer#readme"
"Repository" = "https://github.com/sayedtenkanen/self-evolving-multi-agent-reviewer"
"Issues" = "https://github.com/sayedtenkanen/self-evolving-multi-agent-reviewer/issues"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["semar*"]

[project.scripts]
semar = "semar.cli:main"

[tool.ruff]
line-length = 120

lint.select = [
  "E",    # Pyflakes
  "F",    # Pyflakes
  "B",    # flake8-bugbear
  "I001", # isort basic checks
  "I002", # isort missing-required-import
]

lint.fixable = [
  "I001", # isort basic checks
]

lint.unfixable = [
  "B", # Avoid trying to fix flake8-bugbear violations
]

lint.exclude = []

lint.ignore = ["B008"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["E402"]

[tool.ty]
# ty - Astral's type checker (replaces mypy)
# https://github.com/astral-sh/ty
# Works with sensible defaults - minimal config needed

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "--color=yes"
console_output_style = "progress"
